--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@storybook/preset-create-react-app": "^4.0.0",
     "@storybook/react": "^6.4.18",
     "@types/styled-components": "^5.1.22",
+    "prettier": "^2.5.1",
     "webpack": "^5.68.0"
   }
 }
